--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
         .footer a {
             color: #ccccff;
         }
+        div.addthis_toolbox {
+            width:180px;
+            margin: 0 auto;
+        }
     </style>
 </head>
 <body>
@@ -188,13 +192,30 @@
                 </div>
                 <div class="row-fluid">
             <div class="span6 offset3 order">
-                <button class="btn btn-success btn-large">Preorder</button>
+                <!--<button class="btn btn-success btn-large">Preorder</button>-->
+                <a class="coinbase-button" data-code="4d4b84bbad4508b64b61d372ea394dad"
+                   data-button-style="custom_large"
+                   data-button-text="Preorder with Bitcoin"
+                   href="https://coinbase.com/checkouts/4d4b84bbad4508b64b61d372ea394dad">Preorder With Bitcoin</a>
+                <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
             </div>
                 </div>
                 <div class="row-fluid">
             <div class="span8 offset2 social">
-                <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-                <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+                <!--<button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>-->
+                <!--<button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>-->
+                <!-- AddThis Button BEGIN -->
+                <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+                    <a class="addthis_button_preferred_1"></a>
+                    <a class="addthis_button_preferred_2"></a>
+                    <!--<a class="addthis_button_preferred_3"></a>-->
+                    <!--<a class="addthis_button_preferred_4"></a>-->
+                    <a class="addthis_button_compact"></a>
+                    <a class="addthis_counter addthis_bubble_style"></a>
+                </div>
+                <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+                <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-51fdedbc49541a07"></script>
+                <!-- AddThis Button END -->
             </div>
         </div>
     </div>
@@ -275,5 +296,15 @@
         </div>
     </div>
 </div>
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-42934298-1', 'amazonaws.com');
+    ga('send', 'pageview');
+
+</script>
 </body>
 </html>
